// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shows basic pills 1`] = `
<div>
  <div
    data-styleName="header"
  >
    My Skills
  </div>
  <div
    data-styleName="pill-container expanded"
  >
    <Pillbox
      addLabel="Add a Skill"
      handleAddition={[Function]}
      handleDelete={[Function]}
      handleInputChange={[Function]}
      pills={
        Array [
          Object {
            "id": 1,
            "label": "test",
            "name": "test",
          },
          Object {
            "id": 2,
            "label": "unclickable",
            "name": "unclickable",
          },
        ]
      }
      placeholder="What other skills do you have?"
    />
  </div>
</div>
`;

exports[`shows editable fields when isMe = true 1`] = `
<div>
  <div
    data-styleName="header"
  >
    My Skills
  </div>
  <div
    data-styleName="pill-container expanded"
  >
    <Pillbox
      addLabel="Add a Skill"
      editable={true}
      handleAddition={[Function]}
      handleDelete={[Function]}
      handleInputChange={[Function]}
      pills={
        Array [
          Object {
            "id": 1,
            "label": "test",
            "name": "test",
          },
          Object {
            "id": 2,
            "label": "unclickable",
            "name": "unclickable",
          },
        ]
      }
      placeholder="What other skills do you have?"
    />
  </div>
</div>
`;
